fix: dark mode on app page

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -26,6 +26,8 @@ $labelFontSize: 1.075em
 
 $primary-color: var(--primary-color)
 
+$component-background: var(--component-background)
+
 =sameSizeSvg
   font-size: 1.2em
   width: 1.2em
