--- a/src/styles/views/app.module.sass
+++ b/src/styles/views/app.module.sass
@@ -73,13 +73,13 @@
           opacity: .82
 
   &.DarkOwned
-    background-color: variables.$lighter-background-color
+    background-color: variables.$component-background
     box-shadow: none
     color: variables.$foreground-color
 
     .OwnedList
       .ViewAll
-        background: linear-gradient(to right, rgba(#060e2b, .5), rgba(#060e2b, .75) 8%, rgba(#060e2b, .95) 27%, #060e2b 42%)
+        background: linear-gradient(to right, rgb(0, 0, 0, 0) 10%, rgba(0, 0, 0, .9) 80%)
 
         a
           color: variables.$foreground-color
